--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,8 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  background-image: url(public\Gradient.png);
+  background-color: red;
 }
 
 @layer utilities {
